# beatrice_v

./: .gitignore  BUILDING.md  LICENSE.md  README.md  build-win.ps1
api/: .gitignore  Cargo.toml  build-win.ps1  test.py
api/src/: lib.rs
example/: robot.json
example/src/: main.py
runtime/: Cargo.toml  build-win.ps1
runtime/src/: main.rs
runtime/src/beatrice_v/: mod.rs  project.rs  state.rs
runtime/src/beatrice_v/engine/: entity.rs  mod.rs  robot.rs
runtime/src/beatrice_v/engine/controller/: driver.rs  mod.rs  motor.rs  sensor.rs
runtime/src/beatrice_v/engine/math/: angle.rs  axis.rs  mod.rs  vec.rs
